structure for components

--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -1,3 +1,9 @@
 <div id="main container">
   <h1>This is rendering!</h1>
+  <nav>
+    <search/>
+  </nav>
+  <div id="movie-list">
+    <movie-list/>
+  </div>
 </div>
