Sets up components

--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -1,6 +1,7 @@
 <div id="main container">
   <h1>This is rendering!</h1>
   <nav>
+    <h5>hello</h5>
     <search/>
   </nav>
   <div id="movie-list">
