--- a/public/client/templates/movieList.html
+++ b/public/client/templates/movieList.html
@@ -1,5 +1,3 @@
-<ul class="movie-list">
-  <li>Movie</li>
-  <li>Movie</li>
-  <li>Movie</li>
-</ul>
+<div class="movie-list">
+  <movie-entry ng-repeat="movie in ctrl.movies" movie="movie" />
+</div>
