implement search box handleClick

--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -1,7 +1,7 @@
 <div id="main container">
   <h1>Welcome {{ctrl.users[0].username}}</h1>
   <nav>
-    <h5>hello</h5>
+    <!-- <h5>hello</h5> -->
     <search/>
   </nav>
   <div id="auth-panel">
