some changes to get auth working

--- a/public/client/templates/authPanel.html
+++ b/public/client/templates/authPanel.html
@@ -7,7 +7,8 @@
     <label>Password: </label>
     <input type="password" ng-model="ctrl.password">
 
-    <input type="submit" ng-value="ctrl.mode ? 'Sign In' : 'Sign Up'" ng-click="ctrl.mode ? app.get">
+    <input type="submit" ng-value="ctrl.mode ? 'Sign In' : 'Sign Up'">
+     <!-- ng-click="ctrl.mode ? app.get" -->
 
     <span ng-if="!ctrl.mode">Already have an account? <a href="#" ng-click="ctrl.toggleMode()">Click here.</a></span>
     <span ng-if="ctrl.mode">Need an account? <a href="#" ng-click="ctrl.toggleMode()">Click here.</a></span>
