--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -1,12 +1,12 @@
 <div id="main container">
   <h1>Welcome {{ctrl.users[0].username}}</h1>
-  <nav>
-    <!-- <h5>hello</h5> -->
-    <search service="ctrl.searchService" searchResult="ctrl.searchResult" />
-  </nav>
   <div id="auth-panel">
     <auth-panel />
   </div>
+  <nav>
+    <!-- <h5>hello</h5> -->
+    <search />
+  </nav>
   <div id="movie-list">
     <movie-list movies="ctrl.users[0].watched" />
   </div>
