--- a/public/client/templates/search.html
+++ b/public/client/templates/search.html
@@ -5,10 +5,10 @@
     type="text"
   />
   <button class="btn" ng-click="ctrl.handleClick()">
-    <span class="glyphicon glyphicon-search">add movie</span>
+    <span class="glyphicon glyphicon-search">search movie</span>
   </button>
+  <search-result-list movies="ctrl.results"/>
   <!-- <button class="btn">
     <span class="glyphicon glyphicon-search">add movie</span>
   </button> -->
 </div>
-
