--- a/public/client/templates/searchResultList.html
+++ b/public/client/templates/searchResultList.html
@@ -1,3 +1,3 @@
 <div>
-  <search-result-entry ng-repeat="movie in ctrl.searchResult" movie="movie" />
+  <search-result-entry ng-repeat="movie in ctrl.movies" movie="movie" />
 </div>
