--- a/public/client/templates/movieList.html
+++ b/public/client/templates/movieList.html
@@ -1,3 +1,8 @@
-<div class="s">
+<div id="myDropdown" ng-class="dropdown-content">
   <movie-entry ng-repeat="movie in ctrl.movies" movie="movie" />
 </div>
+
+<!-- 
+<div id="myDropdown" class="dropdown-content">
+  <movie-entry ng-repeat="movie in ctrl.movies" movie="movie" />  
+</div> -->
