Finally switch search service to TMDB

--- a/public/client/templates/searchResultEntry.html
+++ b/public/client/templates/searchResultEntry.html
@@ -1,6 +1,6 @@
 <div>
   <!-- <img ng-src="{{ctrl.movie.movie.poster}}"> -->
-  <a href=#>{{ctrl.movie.Title}}</a>
+  <a href=#>{{ctrl.movie.title}}</a>
   <!-- <div>Genre: {{ctrl.movie.Genre}}</div>
   <div>Year: {{ctrl.movie.Year}}</div>
   <div>Rating: {{ctrl.movie.Rated}}</div>
