angular routing first steps

--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -8,6 +8,10 @@
     <search />
   </nav>
   <div id="movie-list">
+    <!-- <div>movie</div>
+    <div>movie</div>
+    <div>movie</div>
+    <div>movie</div> -->
     <movie-list movies="ctrl.users[0].watched" />
   </div>
 </div>
