added poster to search entry

--- a/public/client/templates/authPanel.html
+++ b/public/client/templates/authPanel.html
@@ -11,7 +11,7 @@
      <!-- ng-click="ctrl.mode ? app.get" -->
 
     <span ng-if="!ctrl.mode">Already have an account? <a href="#" ng-click="ctrl.toggleMode()">Click here.</a></span>
-    <span ng-if="ctrl.mode">Need an account? <a href="#" ng-click="ctrl.toggleMode()">Click here.</a></span>
+    <span ng-if="ctrl.mode">Need an account? <a href="/signup" ng-click="ctrl.toggleMode()">Click here.</a></span>
 
   </form>
 </div>
