added on-enter functionality to sign in & sign up, started working on logout button

--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -1,7 +1,7 @@
 <div id="main container">
-  <h1>Welcome {{ctrl.users[0].username}}</h1>
-  <div id="auth-panel">
-  </div>
+  <h1>Welcome, {{ctrl.users[0].username}}!</h1>
+  <div id="auth-panel"></div>
+  <div id="logout-button"></div>
   <nav>
     <!-- <h5>hello</h5> -->
     <search />
