--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -1,5 +1,5 @@
 <div id="main container">
-  <h1>Welcome {{ctrl.users[0].username}}</h1>
+  <h1>Welcome {{ctrl.user.username}}</h1>
   <div id="auth-panel">
   </div>
   <nav>
@@ -11,6 +11,6 @@
     <div>movie</div>
     <div>movie</div>
     <div>movie</div> -->
-    <movie-list movies="ctrl.users[0].watched" />
+    <movie-list movies="ctrl.user.watched" />
   </div>
 </div>
