--- a/public/client/templates/search.html
+++ b/public/client/templates/search.html
@@ -4,7 +4,7 @@
     class="form-control"
     type="text"
   />
-  <button class="btn" ng-click="ctrl.handleClick()">
+  <button class="btn" ng-click="ctrl.handleClick(); ctrl.input = ''">
     <span class="glyphicon glyphicon-search">search movie</span>
   </button>
   <search-result-list movies="ctrl.results"/>
