--- a/public/client/templates/searchResultList.html
+++ b/public/client/templates/searchResultList.html
@@ -1,3 +1,6 @@
-<div class="dropdown-content">
-  <search-result-entry ng-repeat="movie in ctrl.movies" movie="movie" />
+<div class="dropdown-content" >
+  <search-result-entry 
+    ng-repeat="movie in ctrl.movies" 
+    movie="movie" 
+  />
 </div>
