adds movie from search to database

--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -4,7 +4,7 @@
   </div>
   <nav>
     <!-- <h5>hello</h5> -->
-    <search />
+    <search user="ctrl.intendedUser.data.username"/>
   </nav>
   <div id="movie-list">
     <!-- <div>movie</div>
