--- a/public/client/templates/search.html
+++ b/public/client/templates/search.html
@@ -4,10 +4,10 @@
     class="form-control"
     type="text"
   />
-  <button class="btn" ng-click="ctrl.handleClick(); ctrl.input = ''">
-    <span class="glyphicon glyphicon-search">search movie</span>
+  <button class="btn" ng-click="ctrl.handleClick(); ctrl.input = ''; toggleSelect()">
+    <span class="glyphicon glyphicon-search" id="searchButton">search movie</span>
   </button>
-  <search-result-list movies="ctrl.results" user="ctrl.user"/>
+  <search-result-list movies="ctrl.results" user="ctrl.user" ng-show="isPopupVisible"/>
   <!-- <button class="btn">
     <span class="glyphicon glyphicon-search">add movie</span>
   </button> -->
