added bootstrap and tabs

--- a/public/client/templates/search.html
+++ b/public/client/templates/search.html
@@ -5,7 +5,7 @@
     type="text"
   />
   <button class="btn" ng-click="ctrl.handleClick(); ctrl.input = ''">
-    <span class="glyphicon glyphicon-search">search movie</span>
+    <span class="glyphicon glyphicon-search"></span>
   </button>
   <search-result-list movies="ctrl.results"/>
   <!-- <button class="btn">
