--- a/public/client/templates/movieList.html
+++ b/public/client/templates/movieList.html
@@ -1,4 +1,4 @@
-<div id="myDropdown" ng-class="dropdown-content">
+<div>
   <movie-entry ng-repeat="movie in ctrl.movies" movie="movie" />
 </div>
 
