--- a/public/client/templates/search.html
+++ b/public/client/templates/search.html
@@ -4,8 +4,8 @@
     class="form-control"
     type="text"
   />
-  <button class="btn" ng-click="ctrl.handleClick(); ctrl.input = ''">
-    <span class="glyphicon glyphicon-search"></span>
+  <button class="btn" ng-click="ctrl.handleClick(); ctrl.input = ''; toggleSelect()">
+    <span class="glyphicon glyphicon-search" id="searchButton"></span>
   </button>
   <search-result-list movies="ctrl.results" user="ctrl.user" ng-show="isPopupVisible"/>
   <!-- <button class="btn">
