--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -3,7 +3,7 @@
   <div id="auth-panel">
   </div>
   <nav>
-    <search user="ctrl.intendedUser.data.username"/>
+    <search user="ctrl.user"/>
   </nav>
 
   <ul id="userTab" class="nav nav-tabs">
