--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -7,10 +7,10 @@
   </nav>
 
   <ul id="userTab" class="nav nav-tabs">
-    <li><a data-toggle="tab" href="#home">Home</a></li>
-    <li class="active"><a data-toggle="tab" href="#menu1">Watched</a></li>
-    <li><a data-toggle="tab" href="#menu2">Favorites</a></li>
-    <li><a data-toggle="tab" href="#menu3">Recommendations</a></li>
+    <li><a data-toggle="tab" href="#home" onclick="return false;">Home</a></li>
+    <li class="active"><a data-toggle="tab" href="#menu1" onclick="return false;">Watched</a></li>
+    <li><a data-toggle="tab" href="#menu2" onclick="return false;">Favorites</a></li>
+    <li><a data-toggle="tab" href="#menu3" onclick="return false;">Recommendations</a></li>
   </ul>
   <div class="tab-content">
     <div id="home" class="tab-pane fade">
