grab correct data with "edit comment" button click

--- a/public/client/templates/movieEntry.html
+++ b/public/client/templates/movieEntry.html
@@ -16,9 +16,9 @@
       class="form-control"
       type="text"
     />
-    <button class="btn">
+    <button class="btn" ng-click="ctrl.handleAddCommentClick()">
       <span>edit comment</span>
-    </button>
+    </button> 
   </div>
   <div>Your Rating: {{ctrl.movie.rating}}/10</div>
 
