--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -19,7 +19,7 @@
     </div>
     <div id="menu1" class="tab-pane fade in active">
       <div id="movie-list">
-        <movie-list movies="ctrl.user.watched"/>
+        <movie-list movies="ctrl.user.watched" user="ctrl.user"/>
       </div>
     </div>
     <div id="menu2" class="tab-pane fade">
