--- a/public/client/templates/movieList.html
+++ b/public/client/templates/movieList.html
@@ -1,5 +1,5 @@
 <div>
-  <movie-entry ng-repeat="movie in ctrl.movies" movie="movie" />
+  <movie-entry ng-repeat="movie in ctrl.movies" movie="movie" user="ctrl.user" />
 </div>
 
 <!--
