--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -2,9 +2,9 @@
   <h1>Welcome {{ctrl.user.username}}</h1>
   <div id="auth-panel">
   </div>
-  <form id="logout-button" action="/logout" method="get">   
-    <button type="submit">Sign Out</button>   
-  </form>   
+  <form id="logout-button" action="/logout" method="get">
+    <button type="submit">Sign Out</button>
+  </form>
   <nav>
     <search user="ctrl.user"/>
   </nav>
@@ -21,14 +21,14 @@
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
     <div id="menu1" class="tab-pane fade in active">
-      <div id="movie-list">
+      <div id="watched-list">
         <movie-list movies="ctrl.user.watched" user="ctrl.user"/>
       </div>
     </div>
     <div id="menu2" class="tab-pane fade">
-      <h3>Menu 2</h3>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-    </div>
+      <div id="favorites-list">
+        <movie-list movies="ctrl.user.favorites" user="ctrl.user"/>
+      </div>
     <div id="menu3" class="tab-pane fade">
       <h3>Menu 3</h3>
       <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
