--- a/public/client/templates/movieEntry.html
+++ b/public/client/templates/movieEntry.html
@@ -1,28 +1,45 @@
-<div>
-  <img ng-src="{{ctrl.movie.details.Poster}}">
-  <div>{{ctrl.movie.details.Title || 'N/A'}}</div>
-  <div>Genre: {{ctrl.movie.details.Genre}}</div>
-  <div>Year: {{ctrl.movie.details.Year}}</div>
-  <div>Rated: {{ctrl.movie.details.Rated}}</div>
-  <div>Director: {{ctrl.movie.details.Director}}</div>
-  <div>Cast: {{ctrl.movie.details.Actors}}</div>
-  <div>IMDB: {{ctrl.movie.details.Ratings[0].Value}}</div>
-  <div>Rotten Tomatoes: {{ctrl.movie.details.Ratings[1].Value}}</div>
-  <div>Metacritic: {{ctrl.movie.details.Ratings[2].Value}}</div>
-  <div>Comment: {{ctrl.movie.comment}}</div>
-  <div class="search-bar form-inline">
-    <input
-      ng-model="ctrl.input"
-      class="form-control"
-      type="text"
-    />
-    <button class="btn" ng-click="ctrl.handleAddCommentClick()" onclick="return false">
-      <span>edit comment</span>
-    </button>
-    <button class="btn" ng-click="ctrl.handleRemoveClick()">
+
+<div class="movie-entry">
+  <img class="movie-entry-poster" ng-src="{{ctrl.movie.details.Poster}}">
+  <div class="movie-entry-info">
+    <h4 class="movie-entry-title">{{ctrl.movie.details.Title || 'N/A'}}</h4>
+    <div class="movie-info">
+      <div class="year movie-subhead">{{ctrl.movie.details.Year}} </div>
+      <div class="rating movie-subhead">{{ctrl.movie.details.Rated}}</div>
+      <div class="genre movie-subhead">{{ctrl.movie.details.Genre}}</div>
+      <div class="movie-staff">Director: {{ctrl.movie.details.Director}}</div>
+      <div class="movie-staff">Cast: {{ctrl.movie.details.Actors}}</div>
+    </div>
+    <div class="movie-critic-info">
+      <div class="critic-element">
+        <img id="imdb-icon" src="http://icons.iconarchive.com/icons/icons8/windows-8/512/Cinema-Imdb-icon.png">
+        {{ctrl.movie.details.Ratings[0].Value}}
+      </div>
+      <!-- <div>IMDB: {{ctrl.movie.details.Ratings[0].Value}}</div> -->
+      <div class="critic-element">
+        <img id="rotten-tomato-icon" src="http://www.userlogos.org/files/logos/jumpordie/rottentomatoes_03.png">
+        {{ctrl.movie.details.Ratings[1].Value}}
+      </div>
+      <div class="critic-element">
+        <img id="metacritic-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Metacritic.svg/500px-Metacritic.svg.png">
+        {{ctrl.movie.details.Ratings[2].Value}}
+      </div>
+      <!-- <div>Metacritic: {{ctrl.movie.details.Ratings[2].Value}}</div> -->
+    </div>
+    <div class="user-movie-comment">Comment: {{ctrl.movie.comment}}</div>
+    <div class="search-bar form-inline comment-search-bar">
+      <input
+        ng-model="ctrl.input"
+        class="form-control comment-element"
+        type="text"
+      />
+      <button class="btn comment-element" ng-click="ctrl.handleAddCommentClick()" onclick="return false">
+        <span>edit comment</span>
+      </button>
+    </div>
+    <div>Your Rating: {{ctrl.movie.rating}}/10</div>
+    <button class="btn comment-element" ng-click="ctrl.handleRemoveClick()">
       <span>remove</span>
     </button>
   </div>
-  <div>Your Rating: {{ctrl.movie.rating}}/10</div>
-
 </div>
