--- a/public/client/templates/searchResultEntry.html
+++ b/public/client/templates/searchResultEntry.html
@@ -1,7 +1,7 @@
 <div>
   <!-- <a href="/login">{{ctrl.movie.title}}</a> -->
-  <div>{{ctrl.movie.title}}</div>
-  <div>year: {{ctrl.movie.release_date.slice(0,4)}}</div>
+  <div class="search-movie-title">{{ctrl.movie.title}}</div>
+  <div class="search-movie-year">year: {{ctrl.movie.release_date.slice(0,4)}}</div>
   <img ng-src="{{ctrl.movie.poster_path}}">
   <!-- <div>Genre: {{ctrl.movie.Genre}}</div>
   <div>Year: {{ctrl.movie.Year}}</div>
