--- a/public/client/templates/movieEntry.html
+++ b/public/client/templates/movieEntry.html
@@ -44,5 +44,8 @@
     <button class="btn comment-element" id="remove-button" ng-click="ctrl.handleRemoveClick()">
       <span>remove movie</span>
     </button>
+    <button class="btn favorite-element" id="favorite-button" ng-click="ctrl.handleAddToFavorites()">
+      <span>Add to Favorites!</span>
+    </button>
   </div>
 </div>
