--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -31,7 +31,7 @@
     </div>
     <div id="menu2" class="tab-pane fade">
       <div id="favorites-list">
-        <movie-list movies="ctrl.user.favorites" user="ctrl.user"/>
+        <movie-list movies="ctrl.user.watched" user="ctrl.user"/>
       </div>
     </div>
     <div id="menu3" class="tab-pane fade">
