--- a/public/client/templates/movieEntry.html
+++ b/public/client/templates/movieEntry.html
@@ -1,6 +1,6 @@
 
 <div class="movie-entry">
-  <img class="movie-entry-poster" ng-src="{{ctrl.movie.details.Poster}}">
+  <img class="movie-entry-poster" src="http://martjackassests.azureedge.net/css/themes/mjt02012429/images/main/show_loader.gif" ng-src="{{ctrl.movie.details.Poster}}">
   <div class="movie-entry-info">
     <h4 class="movie-entry-title inline-block">{{ctrl.movie.details.Title || 'N/A'}}</h4>
     <button class="btn favorite-element comment-element" id="add-favorite-button" ng-click="ctrl.handleAddToFavorites()">
