--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -35,8 +35,7 @@
       </div>
     </div>
     <div id="menu3" class="tab-pane fade">
-      <h3>Menu 3</h3>
-      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+      <rec-list movies="ctrl.recommendations" user="ctrl.user"/>
     </div>
 
 </div>
