add styling and image to header

--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -5,7 +5,7 @@
         <button type="submit">Sign Out</button>
       </form>
     </div>
-    <h2 class="user-welcome-message">Welcome {{ctrl.user.username}}</h2>
+    <h3 class="user-welcome-message">Welcome {{ctrl.user.username}}!</h3>
     <div id="auth-panel">
     </div>
   </div>
