--- a/public/client/styles.css
+++ b/public/client/styles.css
@@ -231,6 +231,14 @@
   word-wrap: break-word;
 }
 
+.rating-change-select:focus, .rating-change-select:active, .rating-change-select.active, .rating-change-select:focus:active {
+  background-image: none;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+
 #menu1 .favorite #add-favorite-button {  
   display:none;         
 }    
@@ -306,4 +314,5 @@
   min-height: 100%;
   position: relative;
   padding-bottom: 125px;
+  /*background-color: #fcf9f4;*/
 }
