--- a/public/client/templates/search.html
+++ b/public/client/templates/search.html
@@ -1,4 +1,5 @@
 <div class="search-bar form-inline">
+  <div class="search-text"> Add a movie</div>
   <input
     ng-model="ctrl.input"
     class="form-control"
