--- a/public/client/templates/recEntry.html
+++ b/public/client/templates/recEntry.html
@@ -1,11 +1,8 @@
 
 <div class="movie-entry">
-  <img class="movie-entry-poster" src="http://martjackassests.azureedge.net/css/themes/mjt02012429/images/main/show_loader.gif" ng-src="{{ctrl.movie.Poster}}">
+  <img class="movie-entry-poster recommendation-poster" src="http://martjackassests.azureedge.net/css/themes/mjt02012429/images/main/show_loader.gif" ng-src="{{ctrl.movie.Poster}}">
   <div class="movie-entry-info">
     <h4 class="movie-entry-title inline-block">{{ctrl.movie.Title || 'N/A'}}</h4>
-    <button class="btn favorite-element comment-element" id="add-favorite-button" ng-click="ctrl.handleAddToFavorites()">
-      <span>make favorite</span>
-    </button>
     <div class="movie-info">
       <div class="year movie-subhead">{{ctrl.movie.Year}} </div>
       <div class="rating movie-subhead">{{ctrl.movie.Rated}}</div>
