--- a/public/client/styles.css
+++ b/public/client/styles.css
@@ -135,6 +135,8 @@
   /*background-color: grey;*/
   margin-right: 10px;
   vertical-align: bottom;
+  width: 50px;
+  height: auto;
 }
 
 .search-movie-title {
@@ -245,9 +247,9 @@
 }
 
 
-#menu1 .favorite #add-favorite-button {  
-  display:none;         
-}    
+#menu1 .favorite #add-favorite-button {
+  display:none;
+}
 
 #menu1 #remove-favorite-button {
   display:none;
