--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -18,6 +18,8 @@
     <li class="active"><a data-toggle="tab" href="#menu1" onclick="return false;">Watched</a></li>
     <li><a data-toggle="tab" href="#menu2" onclick="return false;">Favorites</a></li>
     <li><a data-toggle="tab" href="#menu3" onclick="return false;">Recommendations</a></li>
+    <li><a data-toggle="tab" href="#menu4" onclick="return false;">Upcoming</a></li>
+
   </ul>
   <div class="tab-content">
     <!-- <div id="home" class="tab-pane fade">
@@ -36,6 +38,9 @@
     </div>
     <div id="menu3" class="tab-pane fade">
       <rec-list movies="ctrl.recommendations" user="ctrl.user"/>
+    </div>
+    <div id="menu4" class="tab-pane fade">
+      <upcoming-list />
     </div>
 
 </div>
