--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -14,18 +14,13 @@
   </nav>
 
   <ul id="userTab" class="nav nav-tabs">
-    <!-- <li><a data-toggle="tab" href="#home" onclick="return false;">Home</a></li> -->
     <li class="active"><a data-toggle="tab" href="#menu1" onclick="return false;">Watched</a></li>
     <li><a data-toggle="tab" href="#menu2" onclick="return false;">Favorites</a></li>
     <li><a data-toggle="tab" href="#menu3" onclick="return false;">Recommendations</a></li>
     <li><a data-toggle="tab" href="#menu4" onclick="return false;">Upcoming</a></li>
-
   </ul>
+
   <div class="tab-content">
-    <!-- <div id="home" class="tab-pane fade">
-      <h3>Menu 1</h3>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div> -->
     <div id="menu1" class="tab-pane fade in active">
       <div id="watched-list">
         <movie-list movies="ctrl.user.watched" user="ctrl.user"/>
@@ -42,5 +37,5 @@
     <div id="menu4" class="tab-pane fade">
       <upcoming-list />
     </div>
-
+  </div>
 </div>
