--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -14,6 +14,7 @@
   </nav>
 
   <ul id="userTab" class="nav nav-tabs">
+    <li><a data-toggle="tab" href="#menu0" onclick="return false;">Top Box Office</a></li>
     <li class="active"><a data-toggle="tab" href="#menu1" onclick="return false;">Watched</a></li>
     <li><a data-toggle="tab" href="#menu2" onclick="return false;">Favorites</a></li>
     <li><a data-toggle="tab" href="#menu3" onclick="return false;">Recommendations</a></li>
@@ -21,6 +22,11 @@
   </ul>
 
   <div class="tab-content">
+    <div id="menu0" class="tab-pane fade">
+      <div id="box-office">
+        <box-office user="ctrl.user"/>
+      </div>
+    </div>
     <div id="menu1" class="tab-pane fade in active">
       <div id="watched-list">
         <movie-list movies="ctrl.user.watched" user="ctrl.user"/>
@@ -36,6 +42,9 @@
     </div>
     <div id="menu4" class="tab-pane fade">
       <upcoming-list />
+    </div>
+    <div id="menu5" class="tab-pane fade">
+      <box-office />
     </div>
   </div>
 </div>
