--- a/public/client/templates/recList.html
+++ b/public/client/templates/recList.html
@@ -1,6 +1,6 @@
 <div>
   <rec-entry
-  ng-repeat="movie in ctrl.movies"
+  ng-repeat="movie in ctrl.movies track by $index"
   movie="movie"
   user="ctrl.user"
   />
