--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -14,20 +14,20 @@
   </nav>
 
   <ul id="userTab" class="nav nav-tabs">
-    <li><a data-toggle="tab" href="#menu0" onclick="return false;">Top Box Office</a></li>
-    <li class="active"><a data-toggle="tab" href="#menu1" onclick="return false;">Watched</a></li>
+    <li class="active"><a data-toggle="tab" href="#menu0" onclick="return false;">Top Box Office</a></li>
+    <li><a data-toggle="tab" href="#menu1" onclick="return false;">Watched</a></li>
     <li><a data-toggle="tab" href="#menu2" onclick="return false;">Favorites</a></li>
     <li><a data-toggle="tab" href="#menu3" onclick="return false;">Recommendations</a></li>
     <li><a data-toggle="tab" href="#menu4" onclick="return false;">Upcoming</a></li>
   </ul>
 
   <div class="tab-content">
-    <div id="menu0" class="tab-pane fade">
+    <div id="menu0" class="tab-pane fade in active">
       <div id="box-office">
         <box-office user="ctrl.user"/>
       </div>
     </div>
-    <div id="menu1" class="tab-pane fade in active">
+    <div id="menu1" class="tab-pane fade">
       <div id="watched-list">
         <movie-list movies="ctrl.user.watched" user="ctrl.user"/>
       </div>
@@ -42,9 +42,6 @@
     </div>
     <div id="menu4" class="tab-pane fade">
       <upcoming-list />
-    </div>
-    <div id="menu5" class="tab-pane fade">
-      <box-office />
     </div>
   </div>
 </div>
