Create video player -- needs to be moved into details view

--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -19,6 +19,8 @@
     <li><a data-toggle="tab" href="#menu2" onclick="return false;">Favorites</a></li>
     <li><a data-toggle="tab" href="#menu3" onclick="return false;">Recommendations</a></li>
     <li><a data-toggle="tab" href="#menu4" onclick="return false;">Upcoming</a></li>
+    <!-- VIDEO PLAYER NEEDS TO BE MOVED INTO MOVIE DETAILS VIEW  -->
+    <li><a data-toggle="tab" href="#menu5" onclick="return false;">VIDEO PLAYER</a></li>
   </ul>
 
   <div class="tab-content">
@@ -29,7 +31,7 @@
     </div>
     <div id="menu1" class="tab-pane fade">
       <div id="watched-list">
-        <movie-list movies="ctrl.user.watched" user="ctrl.user"/>
+        <movie-list movies="ctrl.user.watched" user="ctrl.user" />
       </div>
     </div>
     <div id="menu2" class="tab-pane fade">
@@ -42,6 +44,9 @@
     </div>
     <div id="menu4" class="tab-pane fade">
       <upcoming-list />
+    </div>
+    <div id="menu5" class="tab-pane fade">
+      <video-player video="ctrl.video"/>
     </div>
   </div>
 </div>
